# diagramer-rs

./: Cargo.toml  LICENSE.txt  README.md
examples/: client-simple.rs  server-stress-test.rs  stress-test.rs
src/: api.rs  client.rs  data.rs  lib.rs  main.rs
src/render/: mermaid.rs  mod.rs  svg.rs
src/server/: frontend.rs  mod.rs
static/: script.js  styles.css
templates/: base.html.tera  index.html.tera  session-live-view.html.tera
