[package]
name = "diagramer"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
#autoexamples = false

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["json"] }
ring = "0.16.20"
rocket = { version = "0.5.0-rc.2", features = ["http2", "json", "serde_json", "uuid"] }
rocket-include-tera = "0.5.4"
serde = { version = "1", features = ["derive", "rc"] }
svg = "0.13.0"
tokio = { version = "1.25.0", features = ["macros"] }

[features]
default = ["api", "frontend", "mermaid", "svg"]
api = []
client = ["api"]
frontend = ["server"]
mermaid = ["render"]
render = []
server = ["api"]
svg = ["render"]

[[bin]]
name = "diagramer"
required-features = ["server"]
test = false

[[example]]
name = "server-stress-test"
required-features = ["client", "mermaid", "server"]

[[example]]
name = "client-simple"
required-features = ["client", "mermaid"]

[[example]]
name = "stress-test"
required-features = ["mermaid"]
